--- a/index.html
+++ b/index.html
@@ -2,40 +2,40 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>For You 🎓</title>
+  <title>For Honey 🎓</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-<!-- 🎶 Cinematic Music -->
 <audio id="bgMusic" loop>
-  <source src="https://www.bensound.com/bensound-music/bensound-tenderness.mp3" type="audio/mpeg">
+  <source src="music/your-song.mp3" type="audio/mpeg">
 </audio>
 
 <div class="overlay"></div>
-<div class="confetti"></div>
 
 <div class="container fade-in">
   <div class="envelope" id="envelope">
     <div class="flap"></div>
 
-    <div class="letter">
-      <h1>Happy Graduation 🎓💖</h1>
+    <div class="letter" id="letter">
+      <h1>Happy Graduation 🎓</h1>
 
-      <p>
-        Today isn’t just about a diploma.  
-        It’s about every late night, every doubt,  
-        and every dream you never gave up on.
+      <p class="name">
+        Honey Reigne Manansala Simbulan
       </p>
 
       <p>
-        I watched you grow, struggle, and rise —  
-        and I have never been prouder.
+        Every late night. Every sacrifice.  
+        Every moment you chose to keep going.
+      </p>
+
+      <p>
+        I watched you become stronger, braver,  
+        and more amazing than you ever knew.
       </p>
 
       <p class="signature">
-        Always proud of you,<br>
-        Always yours 💕
+        I am endlessly proud of you 💖
       </p>
     </div>
   </div>
@@ -45,6 +45,9 @@
   </button>
 </div>
 
+<script src="script.js"></script>
+</body>
+</html>
 <script src="script.js"></script>
 </body>
 </html>
