--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
     <div class="letter" id="letter">
       <h1>Happy Graduation 🎓</h1>
 
+      <p style="opacity:0.6; font-size:14px; margin-top:15px;">
+  Take your time 💭
+</p>
+
       <p class="name">
         Honey Reigne Manansala Simbulan
       </p>
