--- a/slideshow.html
+++ b/slideshow.html
@@ -8,10 +8,9 @@
 <body>
 
 <div class="slideshow">
-  <img src="images/photo1.jpg">
-  <img src="images/photo2.jpg">
-  <img src="images/photo3.jpg">
+  <img src="images/honey.jpg" class="show">
 </div>
+
 
 <button class="next-btn" onclick="goFinal()">
   Continue ✨
