--- a/slideshow.html
+++ b/slideshow.html
@@ -6,6 +6,22 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <div class="slideshow-container">
+    <div class="slideshow">
+      <img src="images/honey.jpg" class="show">
+    </div>
+
+    <button class="next-btn" onclick="goFinal()">
+      Continue ✨
+    </button>
+  </div>
+
+  <script>
+    function goFinal() {
+      window.location.href = "final.html";
+    }
+  </script>
+</body>
 
 <div class="slideshow">
   <img src="images/honey.jpg" class="show">
