--- a/slideshow.html
+++ b/slideshow.html
@@ -3,17 +3,18 @@
 <head>
   <meta charset="UTF-8">
   <title>Memories 🎓</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="./style.css">
 </head>
+  
 <body>
-  <div class="slideshow-container">
-    <div class="slideshow">
-      <img src="images/honey.jpg" class="show">
-    </div>
+  <div class="page-center">
+    <div class="slideshow-container">
+      <img src="./images/honey.jpg" alt="Honey">
 
-    <button class="next-btn" onclick="goFinal()">
-      Continue ✨
-    </button>
+      <button class="next-btn" onclick="goFinal()">
+        Continue ✨
+      </button>
+    </div>
   </div>
 
   <script>
